# ops-agent

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
config/: config.example.yml
include/ops_agent/app/: Application.hpp
include/ops_agent/common/: Clock.hpp
include/ops_agent/config/: Config.hpp  ConfigLoader.hpp
include/ops_agent/features/health/: HealthDto.hpp  HealthService.hpp
include/ops_agent/features/metrics/: MetricsService.hpp
include/ops_agent/features/services/: ServiceManager.hpp  ServiceStatusDto.hpp  ServicesService.hpp
include/ops_agent/features/system/: SystemDto.hpp  SystemProbe.hpp  SystemService.hpp
include/ops_agent/features/tcp_check/: TcpCheckDto.hpp  TcpCheckService.hpp  TcpClient.hpp
include/ops_agent/infrastructure/http/: HttpResponse.hpp  RequestLoggingMiddleware.hpp  SecurityMiddleware.hpp
include/ops_agent/infrastructure/linux/: HostInfoProvider.hpp  ProcfsSystemProbe.hpp  SocketTcpClient.hpp  SystemdServiceManager.hpp
include/ops_agent/infrastructure/persistence/: SQLiteConnection.hpp
packaging/nginx/: ops-agent.conf
packaging/systemd/: ops-agent.env  ops-agent.service
src/: main.cpp
src/app/: Application.cpp
src/common/: Clock.cpp
src/config/: ConfigLoader.cpp
src/features/health/: HealthService.cpp
src/features/metrics/: MetricsService.cpp
src/features/services/: ServicesService.cpp
src/features/system/: SystemService.cpp
src/features/tcp_check/: TcpCheckService.cpp
src/infrastructure/http/: HttpResponse.cpp
src/infrastructure/linux/: HostInfoProvider.cpp  ProcfsSystemProbe.cpp  SocketTcpClient.cpp  SystemdServiceManager.cpp
src/infrastructure/persistence/: SQLiteConnection.cpp
tests/: CMakeLists.txt
